# codex-worker

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  demo.py  install.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  tsconfig.json
.github/workflows/: binary-distribution-common.yml  binary-distribution-validate.yml  ci.yml  release-binaries.yml  release.yml
Formula/: codex-worker.rb
codex_worker/: __init__.py  cli.py  state.py  worker.py
demo_tasks/: add-docs.md  analyze-code.md  fix-bugs.md  optimize.md  write-tests.md
docs/distribution/: binary-releases.md
docs/research/github-actions-release-chaining-2026/: 00-master-summary.md
scripts/: build-binary.d.mts  build-binary.mjs  render-homebrew-formula.d.mts  render-homebrew-formula.mjs  spawn-command.d.mts  spawn-command.mjs
src/: __init__.py  __main__.py  cli.py  cli.ts  doctor.ts  index.ts  monitor.ts  output.ts  smoke.ts  state.py  worker.py
src/core/: codex-config.ts  failure-classifier.ts  fleet-mode.ts  ids.ts  markdown.ts  model-catalog.ts  package-meta.ts  paths.ts  profile-faults.ts  profile-manager.ts  raw-log.ts  runtime-env.ts  store.ts  types.ts
src/daemon/: client.ts  server.ts  service.ts
src/runtime/: app-server.ts
test/: alias-flow.test.ts  build-binary.test.ts  codex-config.test.ts  compiled-binary.test.ts  completion-race.test.ts  daemon-client.test.ts  daemon-ipc.test.ts  daemon-service-regressions.test.ts  homebrew-formula.test.ts  install-script.test.ts  model-catalog.test.ts  monitor.test.ts  package-meta.test.ts  pending-request.test.ts  profile-manager.test.ts  protocol-adapter.test.ts  public-surface.test.ts  raw-log.test.ts  read-artifacts.test.ts  runtime-env.test.ts  store-requests.test.ts  turn-idle-watchdog.test.ts
test/helpers/: fake-app-server.ts
test_tasks/: task1.md
(+11 files in other folders)
